# master-thesis

./: .gitignore  .gitmodules  .latexmkrc  Makefile  README.md  README.typ  benchmark_spectre.sh  edit_thesis  how_does_ngram_work  llama_cpp_benchmark.sh  llama_cpp_benchmark_speculative.sh  nemotron-system-prompt.txt  notes.md  open_thesis  readme.md  reload_thesis  style.typ  thesis.tex
.github/workflows/: build.yaml
benchmark/: .clangd  compile_commands.json  main.c  nob.c
docs/: how_to_get_tmux_scrollback  how_to_sync_a_fork
results/: 1.md  2.md  3.md  4.md  5.md  results.csv
scripts/: monitor_thesis_for_changes  open_thesis_with_sumatra_pdf  update_llama_cpp.sh
spectre/: .clang-format  CMakeLists.txt
spectre/assets/: 01-speculative-pipeline.html  02-eagle-family.html  03-spectre-stack.html  04-technique-compare.html  05-accept-reject-graph.html  06-progress-report.html  07-how-speculative-decoding-works.html  08-spectre-uml-classes.html  09-spectre-sequence-start.html  10-spectre-activity-run.html  11-future-speculative-sequence.html  index.html
spectre/presentation/: README.md
spectre/presentation/excalidraw/: README.md  pipeline-starter.excalidraw
spectre/presentation/html/: atlas.html  index.html  quality.html  quant.html
spectre/presentation/html/assets/: thesis-figures.css
spectre/presentation/mermaid/: diagrams.md
spectre/scripts/: README.md  benchmark.sh  quality_eval.py  quant_charts.py  visualize.py
spectre/src/: main.cpp
